# HyperMonkey

./: .gdbinit  Cargo.toml  README.md  justfile  rust-toolchain.toml
guest/: .gitignore  Cargo.toml  build.rs
guest/.cargo/: config.toml
guest/c/: fake_clock.c  fake_entropy.c  fake_exit.c  fake_sysconf.c  memalign.c
guest/patch/: commit-sha.txt  encoding_c-0001-feat-add-no_std-support.patch  encoding_c_mem-0001-feat-add-no_std-support.patch  lbz-sys-0001-feat-add-no_std-support.patch  mozjs-0001-feat-port-to-X86-baremetal-target.patch
guest/src/: main.rs
src/: main.rs
